same issues so resolved the problem to be too large of font size for button size

--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -72,7 +72,7 @@ li {
   border-radius: 50%;
   height: 50px;
   width: 55px;
-  font-size: 40px;
+  font-size: 1.2rem;
   display: flex;
   justify-content: center;
   align-items: center;
